[package]
name = "anevicon"
description = "An UDP-based server stress-testing tool, written in Rust"
repository = "https://github.com/Gymmasssorla/anevicon"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["anevicon", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "gpl-3.0-only"
edition = "2018"

[dependencies]
