[package]
name = "anevicon"
description = "An UDP-based server stress-testing tool, written in Rust"
repository = "https://github.com/Gymmasssorla/anevicon"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["anevicon", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "gpl-3.0-only"
edition = "2018"

[dependencies]
fern = { version = "0.5.7", features = ["colored"] }
log = "0.4.6"
time = "0.1.42"
termion = "1.5.1"
clap = "2.32.0"
humantime = "1.2.0"