[package]
name = "anevicon"
description = "The most powerful UDP-based load generator, written in Rust"
repository = "https://github.com/Gymmasssorla/anevicon"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["anevicon", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "GPL-3.0-only"
edition = "2018"

[badges]
travis-ci = { repository = "Gymmasssorla/anevicon", branch = "master" }

[dependencies]
fern = { version = "0.5.7", features = ["colored"] }
log = "0.4.6"
time = "0.1.42"
humantime = "1.2.0"
colored = "1.7.0"
structopt = "0.2.14"
rand = "0.6.5"
lazy_static = "1.2.0"
